--- a/base-middleware/Makefile
+++ b/base-middleware/Makefile
@@ -2,45 +2,53 @@ generate-graphql:
 	export PATH="$PATH:$(go env GOPATH)/bin"
 	gqlgen generate
 
-# Makefile snippet: generate gRPC code from local protos (copied into modules/)
-PROTOC      := protoc
-PROTO_DIR   := modules
-OUT_DIR     := generated/grpc
+# Makefile - generate grpc to generate/grpc
+OUT_DIR          := generate/grpc
 
-# list your modules that should be generated from local proto files
-GRPC_MODULES := app_user health
+# modules that require protoc-gen-validate
+GRPC_MODULES              := app_user health
+# modules that do not require validation plugin
+GRPC_MODULES_NO_VALIDATION :=
 
-# try to find protoc-gen-validate proto dir in module cache (optional)
+# Try to locate PGV proto dir in GOPATH module cache (vendor not used here)
 PGV_PROTO_DIR := $(shell ls -d $(go env GOPATH)/pkg/mod/github.com/envoyproxy/protoc-gen-validate@* 2>/dev/null | head -n1)
 
-GO_OUT_FLAGS      := --go_out=$(OUT_DIR) --go_opt=paths=source_relative
-GO_GRPC_OUT_FLAGS := --go-grpc_out=$(OUT_DIR) --go-grpc_opt=paths=source_relative
-VALIDATE_FLAGS    := --validate_out="lang=go:$(OUT_DIR)" --validate_opt="paths=source_relative"
-
-.PHONY: protoc clean
+OUT_DIR := generated/grpc
 
 protoc:
 	@echo "Ensure output dir: $(OUT_DIR)"
 	@mkdir -p $(OUT_DIR)
-	@echo "Using local protos from $(PROTO_DIR)"
-	@echo "PGV proto dir: '$(PGV_PROTO_DIR)' (empty = not found)"
 	@echo
 
-	@$(foreach mod,$(GRPC_MODULES), \
-		echo "-> Generating module: $(mod)"; \
-		$(PROTOC) \
-		  $(if $(PGV_PROTO_DIR),--proto_path=$(PGV_PROTO_DIR),) \
-		  --proto_path=$(PROTO_DIR) \
-		  $(GO_OUT_FLAGS) \
-		  $(GO_GRPC_OUT_FLAGS) \
-		  $(if $(PGV_PROTO_DIR),$(VALIDATE_FLAGS),) \
-		  $(PROTO_DIR)/$(mod)/grpc/$(mod).proto || (echo "protoc failed for $(mod)"; exit 1); \
+	@echo "=== Running protoc for validated modules (validate files written alongside pb files) ==="
+	$(foreach mod,$(GRPC_MODULES), \
+	  echo "-> $(mod)"; \
+	  protoc \
+	    --proto_path=$(PGV_PROTO_DIR) \
+	    --go_opt=paths=source_relative \
+	    --go_out=$(OUT_DIR) \
+	    --go-grpc_opt=paths=source_relative \
+	    --go-grpc_out=$(OUT_DIR) \
+	    --validate_out="lang=go:$(OUT_DIR)" \
+	    --validate_opt="paths=source_relative" \
+	    proto/$(mod).proto; \
 	)
 
 	@echo
-	@echo "Generation finished. Run 'go mod tidy' if needed."
+	@echo "=== Running protoc for non-validated modules ==="
+	$(foreach mod,$(GRPC_MODULES_NO_VALIDATION), \
+	  echo "-> $(mod)"; \
+	  protoc \
+	    --proto_path=$(PGV_PROTO_DIR) \
+	    --go_opt=paths=source_relative \
+	    --go_out=$(OUT_DIR) \
+	    --go-grpc_opt=paths=source_relative \
+	    --go-grpc_out=$(OUT_DIR) \
+	    proto/$(mod).proto; \
+	)
+
 
 clean:
-	@echo "Removing generated files..."
+	@echo "Removing $(OUT_DIR)..."
 	@rm -rf $(OUT_DIR)
-	@echo "Done."
+	@echo "Clean complete."
