--- a/base-middleware/Makefile
+++ b/base-middleware/Makefile
@@ -1,7 +1,3 @@
-generate-graphql:
-	export PATH="$PATH:$(go env GOPATH)/bin"
-	gqlgen generate
-
 # Makefile - generate grpc to generate/grpc
 OUT_DIR          := generate/grpc
 
@@ -14,6 +10,10 @@ GRPC_MODULES_NO_VALIDATION :=
 PGV_PROTO_DIR := $(shell ls -d $(go env GOPATH)/pkg/mod/github.com/envoyproxy/protoc-gen-validate@* 2>/dev/null | head -n1)
 
 OUT_DIR := generated/grpc
+
+generate-graphql:
+	export PATH="$PATH:$(go env GOPATH)/bin"
+	gqlgen generate
 
 protoc:
 	@echo "Ensure output dir: $(OUT_DIR)"
@@ -52,3 +52,6 @@ clean:
 	@echo "Removing $(OUT_DIR)..."
 	@rm -rf $(OUT_DIR)
 	@echo "Clean complete."
+
+run:
+	go run main.go
